[package]
name = "dwaar-plugins"
version = "0.1.0"
description = "Plugin trait, plugin chain, built-in plugins (bot detection, rate limiting, compression, security headers)"
edition.workspace = true
publish = false
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
authors.workspace = true

[features]
# Enable the WASM plugin runtime (wasmtime + component model).
# Off by default to keep the binary lean for deployments that don't use WASM plugins.
wasm = ["dep:wasmtime", "dep:anyhow", "dep:parking_lot"]

[dependencies]
wasmtime = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
base64 = { workspace = true }
ahash = { workspace = true }
bcrypt = { workspace = true }
compact_str = { workspace = true }
pingora-http = { workspace = true }
pingora-limits = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
daachorse = { workspace = true }
flate2 = { workspace = true }
brotli = { workspace = true }
zstd = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "time", "rt"] }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
zeroize = { workspace = true }
subtle = "2"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
wat = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "bot_detect"
harness = false

[[bench]]
name = "compress"
harness = false

[lints]
workspace = true
