[package]
name = "dwaar-tls"
version = "0.1.0"
description = "TLS termination, ACME client (Let's Encrypt + Google Trust Services), certificate management"
edition.workspace = true
publish = false
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
authors.workspace = true

[dependencies]
pingora-core = { workspace = true }
async-trait = { workspace = true }
arc-swap = { workspace = true }
openssl = { workspace = true }
lru = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "time", "net", "io-util", "process"] }
instant-acme = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
openssl-sys = "0.9"
libc = { workspace = true }
foreign-types-shared = "0.1"

[lints]
workspace = true
